tests/snapshots/spanshot_request@7040121679852015515-2.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_expr: AllocTemporary, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `&x: &T`

&x @ p: &T
// Applying rule `Deref`
x @ *p: T

// Final bindings:
let x: T = *p
