tests/snapshots/spanshot_request@7133874459542616726.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: Skip
    mut_on_ref: ResetBindingMode
    allow_ref_pat_on_ref_mut: false
    simplify_expressions: false
    eat_two_layers: true
    eat_inherited_ref_alone: false
    downgrade_shared_inside_shared: false
  bundle_name: stable_rust
  request: "[&x]: &[T]"
---
[&x] @ p: &[T]
// Applying rule `ConstructorRef`
&x @ &(*p).0: &T
// Type error for `&x @ &(*p).0: &T`: TypeMismatch
