tests/snapshots/spanshot_request@7135858813715483790.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_expr: AllocTemporary, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[x, y]: &[T, U]`

[x, y] @ p: &[T, U]
// Applying rule `ConstructorRef`
x @ &(*p).0: &T
y @ &(*p).1: &U

// Final bindings:
let x: &T = &(*p).0
let y: &U = &(*p).1
