tests/snapshots/spanshot_request@7194139432560294485.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true, eat_two_layers: false, eat_inherited_ref_alone: true }"
---
Query: `&x: T`

&x @ p: T
// ERROR: no rules applies to &x @ p: T
